--- a/achub/package.json
+++ b/achub/package.json
@@ -9,6 +9,7 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "style-component": "^0.0.1",
